--- a/Lab01/MainWindow.xaml
+++ b/Lab01/MainWindow.xaml
@@ -1,102 +1,56 @@
-<Window x:Class="Lab01.MainWindow"
+﻿<Window x:Class="Lab01.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Lab01"
-        xmlns:Entity_Data_Modells="clr-namespace:Lab01.Entity_Data_Modells" 
-    mc:Ignorable="d"
-        Title="MainWindow" Height="1000" Width="1200">
-    <Window.Resources>
-        <Style TargetType="{x:Type Button}" x:Key="magicalButton">
-            <Setter Property="BorderBrush" Value="Black" />
-            <Setter Property="Margin" Value="10" />
-        </Style>
-        <CollectionViewSource x:Key="weatherEntryViewSource" d:DesignSource="{d:DesignInstance {x:Type Entity_Data_Modells:WeatherEntry}, CreateList=True}"/>
-        <CollectionViewSource x:Key="weatherEntitiesViewSource" d:DesignSource="{d:DesignInstance {x:Type Entity_Data_Modells:WeatherEntities}, CreateList=True}"/>
-        <CollectionViewSource x:Key="weatherEntitiesWeatherEntriesViewSource" Source="{Binding WeatherEntries, Source={StaticResource weatherEntitiesViewSource}}"/>
-        <CollectionViewSource x:Key="personViewSource" d:DesignSource="{d:DesignInstance {x:Type local:Person}, CreateList=True}"/>
-        <CollectionViewSource x:Key="productViewSource" d:DesignSource="{d:DesignInstance {x:Type Entity_Data_Modells:Product}, CreateList=True}"/>
-    </Window.Resources>
+        mc:Ignorable="d"
+        Title="MainWindow" 
+        WindowState="Maximized" Width="1920" Height="1080">
     <Grid>
-        <Grid.DataContext>
-            <StaticResource ResourceKey="weatherEntitiesWeatherEntriesViewSource"/>
-        </Grid.DataContext>
+        <Grid.Background>
+            <ImageBrush ImageSource="Resources/background.jpg" Stretch="UniformToFill"/>
+        </Grid.Background>
         <Grid.RowDefinitions>
-            <RowDefinition Height="40*"/>
-            <RowDefinition Height="939*"/>
+            <RowDefinition Height="40"/>
+            <RowDefinition Height="1400"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="340*"/>
-            <ColumnDefinition Width="260*"/>
+            <ColumnDefinition Width="640"/>
+            <ColumnDefinition Width="640"/>
+            <ColumnDefinition Width="640"/>
         </Grid.ColumnDefinitions>
-        <ListBox Margin="10,38,0,62" ItemsSource="{Binding Items}" Grid.RowSpan="2">
-            <ListBox.ItemTemplate>
-                <DataTemplate>
-                    <StackPanel Orientation="Horizontal">
-                        <TextBlock Text="{Binding Path=Name}" Width="350"/>
-                        <TextBlock Text="{Binding Path=Age}" Width="150"/>
-                        <Image Source="{Binding Path=Picture}" Width="150"/>
-                    </StackPanel>
-                </DataTemplate>
-            </ListBox.ItemTemplate>
-        </ListBox>
-        <StackPanel Grid.Column="1" Margin="20" Orientation="Vertical" Grid.RowSpan="2">
-            <TextBlock TextWrapping="Wrap" Text="Name"/>
-            <TextBox Name ="nameTextBox" Height="23" TextWrapping="Wrap" Text="Jarosław" Margin="0,0,0,10"/>
-            <TextBlock TextWrapping="Wrap" Text="Age"/>
-            <TextBox Name="ageTextBox" Height="23" TextWrapping="Wrap" Text="99"  Margin="0,0,0,10"/>
-            <Image Name="photoPreview" Height="150" Width="150"/>
-            <Button Name = "addNewPhoto" Content="Add photo" Click="AddNewPhoto_Click" Margin="0,0,0,10" Width="150"/>
-            <Button Name = "addNewPersonButton" Content="Add new person" Click="AddNewPersonButton_Click" Margin="0,0,0,10" Width="150"/>
-            <Button Name =  "addNewPersonFromWeb" Content="Add new person from web" Click="AddNewPersonFromWeb_Click" Width="150"/>
-            <Grid Height="50">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition/>
-                    <ColumnDefinition Width="3*"/>
-                </Grid.ColumnDefinitions>
-                <Grid.RowDefinitions>
-                    <RowDefinition/>
-                    <RowDefinition/>
-                </Grid.RowDefinitions>
-                <Button Content="Perform stupid calculations" Grid.Column="1" Margin="5" Grid.Row="0" Grid.RowSpan="2" Click="Button_Click"/>
-                <TextBlock Text="Final number" Grid.Column="0" Grid.Row="0" Margin="0" HorizontalAlignment="Left" VerticalAlignment="Bottom"></TextBlock>
-                <TextBox x:Name="finalNumberTextBox" Text="0" Grid.Column="0" Grid.Row="1" VerticalAlignment="Top"></TextBox>
-            </Grid>
-            <TextBlock x:Name="progressTextBlock" TextWrapping="Wrap" Text=""/>
-            <TextBlock x:Name="progressTextBlock2" TextWrapping="Wrap" Text=""/>
-            <Button x:Name="weatherDataButton" Content="Load the weather data from the known locations" Click="LoadWeatherData"/>
-            <ProgressBar x:Name="weatherDataProgressBar" Height="20"/>
-            <TextBlock x:Name="weatherDataTextBlock" />
-            <Button Content="CANCEL" Click="Button_Click_1"/>
-            <Button Name="addNewCatInfo" Content="Add new random cat fact!" Click="AddCatFact_Click"/>
-            <Button Name="addNewBitcoinValue" Content="Check bitcoin value" Click="AddBitcoinValue_Click"/>
-            <Button Name="addNewFoxPhoto" Content="Download random fox photo" Click="AddRandomFoxPhoto_Click"/>
-            <Grid x:Name="grid1" VerticalAlignment="Top" Margin="10,20,0,0" HorizontalAlignment="Left" DataContext="{StaticResource weatherEntryViewSource}" Grid.Column="4" Width="235">
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="22"/>
-                    <RowDefinition Height="10"/>
-                    <RowDefinition Height="Auto"/>
-                    <RowDefinition Height="Auto"/>
-                </Grid.RowDefinitions>
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="Auto"/>
-                    <ColumnDefinition Width="Auto"/>
-                </Grid.ColumnDefinitions>
-                <Label VerticalAlignment="Center" Grid.Row="0" Margin="3,3,0,3" HorizontalAlignment="Left" Grid.Column="0" Content="City:" Grid.RowSpan="2"/>
-                <TextBox x:Name="cityTextBox" Width="120" VerticalAlignment="Center"  Grid.Row="0" Margin="3,4,0,4" Height="24" HorizontalAlignment="Left" Grid.Column="1" Grid.RowSpan="2"/>
-                <Label VerticalAlignment="Center" Grid.Row="2" Margin="3,3,0,3" HorizontalAlignment="Left" Grid.Column="0" Content="Id:"/>
-                <TextBox x:Name="idTextBox" Width="120" VerticalAlignment="Center"  Grid.Row="2" Margin="3,4,0,4" Height="24" HorizontalAlignment="Left" Grid.Column="1"/>
-                <Label VerticalAlignment="Center" Grid.Row="3" Margin="3,3,0,3" HorizontalAlignment="Left" Grid.Column="0" Content="Temperature:"/>
-                <TextBox x:Name="temperatureTextBox" Width="120" VerticalAlignment="Center"  Grid.Row="3" Margin="3,4,0,4" Height="24" HorizontalAlignment="Left" Grid.Column="1"/>
-            </Grid>
-            <DataGrid x:Name="weatherEntryDataGrid" AutoGenerateColumns="False" Grid.Column="4" EnableRowVirtualization="True" ItemsSource="{Binding Source={StaticResource weatherEntryViewSource}}" Margin="10,167,10,279" RowDetailsVisibilityMode="VisibleWhenSelected">
-                <DataGrid.Columns>
-                    <DataGridTextColumn x:Name="cityColumn1" Binding="{Binding City}" Header="City" Width="SizeToHeader"/>
-                    <DataGridTextColumn x:Name="idColumn1" Binding="{Binding Id}" Header="Id" Width="SizeToHeader"/>
-                    <DataGridTextColumn x:Name="temperatureColumn1" Binding="{Binding Temperature}" Header="Temperature" Width="SizeToHeader"/>
-                </DataGrid.Columns>
-            </DataGrid>
+        <Label Content="PEOPLE" Grid.Column="0" Height="40" VerticalAlignment="Top" FontFamily="Consolas" FontSize="24" FontWeight="Bold" HorizontalAlignment="Center" HorizontalContentAlignment="Center"/>
+        <Label Content="PHOTOS" Grid.Column="1" Height="40" VerticalAlignment="Top" FontFamily="Consolas" FontSize="24" FontWeight="Bold" HorizontalAlignment="Center" HorizontalContentAlignment="Center"/>
+        <Label Content="WEATHER" Grid.Column="2" Height="40" VerticalAlignment="Top" FontFamily="Consolas" FontSize="24" FontWeight="Bold" HorizontalAlignment="Center" HorizontalContentAlignment="Center"/>
+        <StackPanel Grid.Column="0" Grid.Row="1" Orientation="Vertical">
+            <TextBox Name = "nameTextBox" Height="24" TextWrapping="Wrap" Text="Name" HorizontalAlignment="Center" Margin="40,0,0,00" Width="240"/>
+            <TextBox Name = "ageTextBox" Height="24" Width="240" TextWrapping="Wrap" Text="0" HorizontalAlignment="Center" Margin="40,0,0,0"/>
+            <Button Name = "addNewPersonButton" Content="Add new person" Click="AddNewPersonButton_Click" HorizontalAlignment="Center" Margin="40,0,0,0" Width="240"/>
+            <Button Name =  "addNewPersonFromWeb" Content="Add new person from web" Click="AddNewPersonFromWeb_Click" HorizontalAlignment="Center" Margin="40,0,0,0" Width="240"/>
+        </StackPanel>
+        <StackPanel Grid.Column="0" Grid.Row="1">
+            <ListBox ItemsSource="{Binding Items}" Margin="40,120,0,0" HorizontalAlignment="Left" Height="800" VerticalAlignment="Top" Width="560">
+                <ListBox.ItemTemplate>
+                    <DataTemplate>
+                        <StackPanel Orientation="Horizontal" Opacity="50">
+                            <TextBlock Text="{Binding Name}" Width="200"/>
+                            <TextBlock Text="{Binding Age}" Width="40"/>
+                            <Image Source="{Binding Picture}" Width="300"/>
+                        </StackPanel>
+                    </DataTemplate>
+                </ListBox.ItemTemplate>
+            </ListBox>
+        </StackPanel>
+        <StackPanel Grid.Column="1" Grid.Row="1">
+            <Image Name="photoPreview" Height="720" Width="720"/>
+            <Button Name = "addNewPhoto" Content="Add photo" Click="AddNewPhoto_Click" Margin="0,0,0,10" Width="320"/>
+            <Button Name="addNewFoxPhoto" Content="Download random fox photo" Margin="0,0,0,10" Click="AddRandomFoxPhoto_Click" Width="320"/>
+            <Button Name="addNewCatInfo" Content="Add new random cat fact!" Margin="0,0,0,10" Click="AddCatFact_Click" Width="320"/>
+            <Button Name="addNewBitcoinValue" Content="Check bitcoin value" Click="AddBitcoinValue_Click" Width="320"/>
+        </StackPanel>
+        <StackPanel Grid.Column="2" Grid.Row="1">
+            
         </StackPanel>
     </Grid>
 </Window>
