Plot, basics of Material Design

--- a/Lab01/MainWindow.xaml
+++ b/Lab01/MainWindow.xaml
@@ -4,8 +4,16 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Lab01"
+        xmlns:oxy="http://oxyplot.org/wpf"
         xmlns:Entity_Data_Modells="clr-namespace:Lab01.Entity_Data_Modells"
         mc:Ignorable="d"
+        TextElement.Foreground="{DynamicResource MaterialDesignBody}"
+        TextElement.FontWeight="Regular"
+        TextElement.FontSize="13"
+        TextOptions.TextFormattingMode="Ideal"
+        TextOptions.TextRenderingMode="Auto"
+        Background="{DynamicResource MaterialDesignPaper}"
+        FontFamily="{DynamicResource MaterialDesignFont}"
         Title="MainWindow" 
         WindowState="Maximized" Width="1920" Height="1080" Loaded="Window_Loaded">
     <Window.Resources>
@@ -32,23 +40,24 @@
             <ColumnDefinition Width="640"/>
             <ColumnDefinition Width="640"/>
         </Grid.ColumnDefinitions>
-        <Label Name="PeopleLabel" Width="640" Content="PEOPLE" Grid.Column="0" Height="40" VerticalAlignment="Top" FontFamily="Consolas" FontSize="24" FontWeight="Bold" HorizontalAlignment="Center" HorizontalContentAlignment="Center"/>
+        <Label Name="PeopleLabel" Width="640" Content="PEOPLE" Grid.Column="0" Height="40" VerticalAlignment="Top" FontSize="24" FontWeight="Bold" HorizontalAlignment="Center" HorizontalContentAlignment="Center"/>
         <Label Name="PhotosLabel" Width="640" Content="PHOTOS" Grid.Column="1" Height="40" VerticalAlignment="Top" FontFamily="Consolas" FontSize="24" FontWeight="Bold" HorizontalAlignment="Center" HorizontalContentAlignment="Center"/>
         <Label Name="WeatherLabel" Width="640" Content="WEATHER" Grid.Column="2" Height="40" VerticalAlignment="Top" FontFamily="Consolas" FontSize="24" FontWeight="Bold" HorizontalAlignment="Center" HorizontalContentAlignment="Center"/>
         <StackPanel Grid.Column="0" Grid.Row="1" Orientation="Vertical">
-            <TextBox Name = "nameTextBox" Height="24" TextWrapping="Wrap" Text="Name" HorizontalAlignment="Center" Margin="40,0,0,00" Width="240"/>
-            <TextBox Name = "ageTextBox" Height="24" Width="240" TextWrapping="Wrap" Text="0" HorizontalAlignment="Center" Margin="40,0,0,0"/>
-            <Button Name = "addNewPersonButton" Content="Add new person" Click="AddNewPersonButton_Click" HorizontalAlignment="Center" Margin="40,0,0,0" Width="240"/>
-            <Button Name =  "addNewPersonFromWeb" Content="Add new person from web" Click="AddNewPersonFromWeb_Click" HorizontalAlignment="Center" Margin="40,0,0,0" Width="240"/>
+            <TextBox Name = "nameTextBox" Height="24" TextWrapping="Wrap" Text="Name" HorizontalAlignment="Center" Margin="40,10,0,00" Width="240"/>
+            <TextBox Name = "ageTextBox" Height="24" Width="240" TextWrapping="Wrap" Text="0" HorizontalAlignment="Center" Margin="40,10,0,0"/>
+            <Button Name = "addNewPersonButton" Content="Add new person" Click="AddNewPersonButton_Click" HorizontalAlignment="Center" Margin="40,10,0,0" Width="240"/>
+            <Button Name =  "addNewPersonFromWeb" Content="Add new person from web" Click="AddNewPersonFromWeb_Click" HorizontalAlignment="Center" Margin="40,10,0,0" Width="240"/>
         </StackPanel>
         <StackPanel Grid.Column="0" Grid.Row="1">
-            <ListBox ItemsSource="{Binding Items}" Margin="40,120,0,0" HorizontalAlignment="Left" Height="800" VerticalAlignment="Top" Width="560">
+            <ListBox ItemsSource="{Binding Items}" Margin="20,160,0,0" HorizontalAlignment="Left" Height="800" VerticalAlignment="Top" Width="600">
                 <ListBox.ItemTemplate>
                     <DataTemplate>
                         <StackPanel Orientation="Horizontal" Opacity="50">
-                            <TextBlock Text="{Binding Name}" Width="200"/>
-                            <TextBlock Text="{Binding Age}" Width="40"/>
-                            <Image Source="{Binding Picture}" Width="300"/>
+                            <Image Stretch="Fill" RenderOptions.BitmapScalingMode="Fant" Source="{Binding Picture}" Margin="20,10,0,10" Width="210" Height="150"/>
+                            <TextBlock Text="{Binding Name}" Margin="20,10,0,10" Width="200" TextWrapping="Wrap"/>
+                            <TextBlock Text="{Binding Age}" Margin="20,10,0,10" Width="40"/>
+
                         </StackPanel>
                     </DataTemplate>
                 </ListBox.ItemTemplate>
@@ -81,10 +90,10 @@
                 </Grid>
                 <TextBlock x:Name="progressTextBlock" TextWrapping="Wrap" Text=""/>
                 <TextBlock x:Name="progressTextBlock2" TextWrapping="Wrap" Text=""/>
-                <Button x:Name="weatherDataButton" Content="Load the weather data from the known locations" Click="LoadWeatherData"/>
+                <Button x:Name="weatherDataButton" Content="Load the weather data from the known locations" Click="LoadWeatherData" Width="Auto"/>
                 <ProgressBar x:Name="weatherDataProgressBar" Height="20"/>
                 <TextBlock x:Name="weatherDataTextBlock" />
-                <Button Content="CANCEL" Click="Button_Click_1"/>
+                <Button Content="CANCEL" Click="Button_Click_1" Width="Auto"/>
                 <StackPanel Orientation="Horizontal">
                     <TextBlock x:Name="properitiesTextBlock" TextWrapping="Wrap" Text="ASD"/>
                 </StackPanel>
@@ -107,7 +116,7 @@
                 <Label Name="TemperatureLabel" VerticalAlignment="Center" Height="24" Width="120" Grid.Row="3" Margin="0,0,10,10" HorizontalAlignment="Left" Grid.Column="0" Content="Temperature:"/>
                 <TextBox x:Name="temperatureTextBox" Width="120" VerticalAlignment="Center"  Grid.Row="3" Margin="0,0,10,10" Height="24" HorizontalAlignment="Left" Grid.Column="1"/>
             </Grid>
-            <Button Content="Add to Database" Grid.Column="4" HorizontalAlignment="Left" Margin="10,0,0,0" VerticalAlignment="Top" Width="120" Click="Button_Click_3"/>
+            <Button Content="Add to Database" Grid.Column="4" HorizontalAlignment="Left" Margin="10,0,0,0" VerticalAlignment="Top" Width="Auto" Click="Button_Click_3"/>
             <DataGrid x:Name="weatherEntryDataGrid" Width ="600" HorizontalAlignment="Left" AutoGenerateColumns="False" Grid.Column="4" EnableRowVirtualization="True" ItemsSource="{Binding Source={StaticResource weatherEntryViewSource}}" Margin="10,10,0,0" RowDetailsVisibilityMode="VisibleWhenSelected">
                 <DataGrid.Columns>
                     <DataGridTextColumn x:Name="cityColumn1" Binding="{Binding City}" Header="City" Width="SizeToHeader"/>
@@ -115,6 +124,12 @@
                     <DataGridTextColumn x:Name="temperatureColumn1" Binding="{Binding Temperature}" Header="Temperature" Width="SizeToHeader"/>
                 </DataGrid.Columns>
             </DataGrid>
+            
+
+            
+            <Grid Width ="600" Height="300" Margin="20" HorizontalAlignment="Left" >
+                <oxy:PlotView Model="{Binding DataPlot}"/>
+            </Grid>
         </StackPanel>
     </Grid>
 </Window>
